--- a/latex/functions_8cpp.tex
+++ b/latex/functions_8cpp.tex
@@ -1,4 +1,9 @@
 \hypertarget{functions_8cpp}{}\doxysection{Файл functions.\+cpp}
 \label{functions_8cpp}\index{functions.cpp@{functions.cpp}}
+{\ttfamily \#include $<$stdio.\+h$>$}\newline
+{\ttfamily \#include $<$stdlib.\+h$>$}\newline
+{\ttfamily \#include $<$assert.\+h$>$}\newline
+{\ttfamily \#include $<$string.\+h$>$}\newline
+{\ttfamily \#include $<$ctype.\+h$>$}\newline
 {\ttfamily \#include \char`\"{}title.\+h\char`\"{}}\newline
 Граф включаемых заголовочных файлов для functions.\+cpp\+:
