--- a/latex/main_8cpp.tex
+++ b/latex/main_8cpp.tex
@@ -1,5 +1,6 @@
 \hypertarget{main_8cpp}{}\doxysection{Файл main.\+cpp}
 \label{main_8cpp}\index{main.cpp@{main.cpp}}
+{\ttfamily \#include $<$stdio.\+h$>$}\newline
 {\ttfamily \#include \char`\"{}title.\+h\char`\"{}}\newline
 Граф включаемых заголовочных файлов для main.\+cpp\+:
 % FIG 0
@@ -7,6 +8,11 @@
 \begin{DoxyCompactItemize}
 \item 
 int \mbox{\hyperlink{main_8cpp_a840291bc02cba5474a4cb46a9b9566fe}{main}} (void)
+\end{DoxyCompactItemize}
+\doxysubsection*{Переменные}
+\begin{DoxyCompactItemize}
+\item 
+const int \mbox{\hyperlink{main_8cpp_af08413a3ee12cf78b0ddeea71e2648b3}{S\+I\+ZE}} = 100
 \end{DoxyCompactItemize}
 
 
@@ -16,4 +22,13 @@ int \mbox{\hyperlink{main_8cpp_a840291bc02cba5474a4cb46a9b9566fe}{main}} (void)
 \index{main@{main}!main.cpp@{main.cpp}}
 \doxysubsubsection{\texorpdfstring{main()}{main()}}
 {\footnotesize\ttfamily int main (\begin{DoxyParamCaption}\item[{void}]{ }\end{DoxyParamCaption})}
+
+
+
+\doxysubsection{Переменные}
+\mbox{\Hypertarget{main_8cpp_af08413a3ee12cf78b0ddeea71e2648b3}\label{main_8cpp_af08413a3ee12cf78b0ddeea71e2648b3}} 
+\index{main.cpp@{main.cpp}!SIZE@{SIZE}}
+\index{SIZE@{SIZE}!main.cpp@{main.cpp}}
+\doxysubsubsection{\texorpdfstring{SIZE}{SIZE}}
+{\footnotesize\ttfamily const int S\+I\+ZE = 100}
 
