--- a/latex/title_8h.tex
+++ b/latex/title_8h.tex
@@ -1,78 +1,40 @@
 \hypertarget{title_8h}{}\doxysection{Файл title.\+h}
 \label{title_8h}\index{title.h@{title.h}}
-{\ttfamily \#include $<$stdio.\+h$>$}\newline
-{\ttfamily \#include $<$stdlib.\+h$>$}\newline
-{\ttfamily \#include $<$assert.\+h$>$}\newline
-{\ttfamily \#include $<$string.\+h$>$}\newline
-{\ttfamily \#include $<$ctype.\+h$>$}\newline
-{\ttfamily \#include $<$math.\+h$>$}\newline
-Граф включаемых заголовочных файлов для title.\+h\+:
-% FIG 0
 Граф файлов, в которые включается этот файл\+:
-% FIG 1
+% FIG 0
+\doxysubsection*{Макросы}
+\begin{DoxyCompactItemize}
+\item 
+\#define \mbox{\hyperlink{title_8h_a053dc8f7c500102bc1e7ca74c75e2fa2}{Def\+Make\+Onegin\+Great\+Again}}
+\item 
+\#define \mbox{\hyperlink{title_8h_a0c3b6bb7207afff9a01feb0a2e0b1164}{Def\+Onegin\+Test}}
+\end{DoxyCompactItemize}
 \doxysubsection*{Функции}
 \begin{DoxyCompactItemize}
 \item 
 void \mbox{\hyperlink{title_8h_a8cf8275a25658460dc0ecfabecf00ba5}{make\+Onegin\+Great\+Again}} (F\+I\+LE $\ast$fp)
 \begin{DoxyCompactList}\small\item\em Главная функция, вызывающая сортировку \end{DoxyCompactList}\item 
-char $\ast$ \mbox{\hyperlink{title_8h_ac41587d4673c0a1c4683d7509a7e2f68}{input}} (F\+I\+LE $\ast$fp, int $\ast$string\+\_\+amount)
-\begin{DoxyCompactList}\small\item\em Функция ввода текста из файла \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{title_8h_ae5f03f70dec7ac5618c94235b4eacb70}{to\+\_\+strings}} (char $\ast$text\+\_\+temp, char $\ast$$\ast$text, int string\+\_\+amount)
-\begin{DoxyCompactList}\small\item\em Функция преобразование массива текст в двумерный \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{title_8h_a3c1e8d012913061f35f318aca472bf05}{output}} (char $\ast$$\ast$text, int string\+\_\+amount)
-\begin{DoxyCompactList}\small\item\em Функция вывода текста \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{title_8h_a88f829cece0226ab590706979538d514}{sorting}} (char $\ast$$\ast$text, int string\+\_\+amount)
-\begin{DoxyCompactList}\small\item\em Функция сортировки \end{DoxyCompactList}\item 
-size\+\_\+t \mbox{\hyperlink{title_8h_a730477d73e21b348a2c3cb3e4e046cec}{min}} (size\+\_\+t a, size\+\_\+t b)
-\begin{DoxyCompactList}\small\item\em Находит минимум из двух чисел \end{DoxyCompactList}\item 
-int \mbox{\hyperlink{title_8h_af19ca5bc1db37f263ab814a614bbb823}{comp}} (const void $\ast$str1, const void $\ast$str2)
-\begin{DoxyCompactList}\small\item\em Аналогична функции strcmp1. \end{DoxyCompactList}\item 
-int \mbox{\hyperlink{title_8h_aefd8a0af00542e58f089745391d6b811}{strcmp1}} (const char $\ast$string1, const char $\ast$string2)
-\begin{DoxyCompactList}\small\item\em Функция сравнения строк \end{DoxyCompactList}\item 
 int \mbox{\hyperlink{title_8h_aa72568d0cf300221e9fea4e11ef224a7}{Onegin\+Test}} ()
-\begin{DoxyCompactList}\small\item\em Unitest. \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{title_8h_af8745a81de93d376ae1aeb06678a4256}{output\+\_\+reverse}} (char $\ast$$\ast$text, int string\+\_\+amount)
-\begin{DoxyCompactList}\small\item\em Выводит обратную сортировку \end{DoxyCompactList}\item 
-void \mbox{\hyperlink{title_8h_a6881fa816533bd98441563590449f4d0}{output\+\_\+original}} (char $\ast$text\+\_\+temp, int string\+\_\+amount)
-\begin{DoxyCompactList}\small\item\em Выводит исходный текст \end{DoxyCompactList}\end{DoxyCompactItemize}
-\doxysubsection*{Переменные}
-\begin{DoxyCompactItemize}
-\item 
-const int \mbox{\hyperlink{title_8h_af08413a3ee12cf78b0ddeea71e2648b3}{S\+I\+ZE}} = 100
-\item 
-const char \mbox{\hyperlink{title_8h_a188ca891a509dc8f2074df7178c81492}{P\+U\+N\+K\+T\+U\+A\+T\+I\+O\+N\+\_\+\+M\+A\+RK}} \mbox{[}$\,$\mbox{]} = \char`\"{}.,!?-\/\+:; \char`\"{}
-\end{DoxyCompactItemize}
+\begin{DoxyCompactList}\small\item\em Unitest. \end{DoxyCompactList}\end{DoxyCompactItemize}
+
+
+\doxysubsection{Макросы}
+\mbox{\Hypertarget{title_8h_a053dc8f7c500102bc1e7ca74c75e2fa2}\label{title_8h_a053dc8f7c500102bc1e7ca74c75e2fa2}} 
+\index{title.h@{title.h}!DefMakeOneginGreatAgain@{DefMakeOneginGreatAgain}}
+\index{DefMakeOneginGreatAgain@{DefMakeOneginGreatAgain}!title.h@{title.h}}
+\doxysubsubsection{\texorpdfstring{DefMakeOneginGreatAgain}{DefMakeOneginGreatAgain}}
+{\footnotesize\ttfamily \#define Def\+Make\+Onegin\+Great\+Again}
+
+\mbox{\Hypertarget{title_8h_a0c3b6bb7207afff9a01feb0a2e0b1164}\label{title_8h_a0c3b6bb7207afff9a01feb0a2e0b1164}} 
+\index{title.h@{title.h}!DefOneginTest@{DefOneginTest}}
+\index{DefOneginTest@{DefOneginTest}!title.h@{title.h}}
+\doxysubsubsection{\texorpdfstring{DefOneginTest}{DefOneginTest}}
+{\footnotesize\ttfamily \#define Def\+Onegin\+Test}
+
 
 
 \doxysubsection{Функции}
-\mbox{\Hypertarget{title_8h_af19ca5bc1db37f263ab814a614bbb823}\label{title_8h_af19ca5bc1db37f263ab814a614bbb823}} 
-\index{title.h@{title.h}!comp@{comp}}
-\index{comp@{comp}!title.h@{title.h}}
-\doxysubsubsection{\texorpdfstring{comp()}{comp()}}
-{\footnotesize\ttfamily int comp (\begin{DoxyParamCaption}\item[{const void $\ast$}]{str1,  }\item[{const void $\ast$}]{str2 }\end{DoxyParamCaption})}
-
-
-
-Аналогична функции strcmp1. 
-
-Работает со строками исходного текста, определяя их очередность по алфавиту. \mbox{\Hypertarget{title_8h_ac41587d4673c0a1c4683d7509a7e2f68}\label{title_8h_ac41587d4673c0a1c4683d7509a7e2f68}} 
-\index{title.h@{title.h}!input@{input}}
-\index{input@{input}!title.h@{title.h}}
-\doxysubsubsection{\texorpdfstring{input()}{input()}}
-{\footnotesize\ttfamily char$\ast$ input (\begin{DoxyParamCaption}\item[{F\+I\+LE $\ast$}]{fp,  }\item[{int $\ast$}]{string\+\_\+amount }\end{DoxyParamCaption})}
-
-
-
-Функция ввода текста из файла 
-
-
-\begin{DoxyParams}{Аргументы}
-{\em \mbox{[}\+F\+I\+L\+E$\ast$\mbox{]}} & fp указатель на файл, из которого считывается текст \\
-\hline
-{\em \mbox{[}int$\ast$\mbox{]}} & string\+\_\+amount указатель на число строк в тексте\\
-\hline
-\end{DoxyParams}
-Функция считывает текст из файла, записывая значения числа строк и общего числа символов. Функция возвращает указатель на массив с текстом. \mbox{\Hypertarget{title_8h_a8cf8275a25658460dc0ecfabecf00ba5}\label{title_8h_a8cf8275a25658460dc0ecfabecf00ba5}} 
+\mbox{\Hypertarget{title_8h_a8cf8275a25658460dc0ecfabecf00ba5}\label{title_8h_a8cf8275a25658460dc0ecfabecf00ba5}} 
 \index{title.h@{title.h}!makeOneginGreatAgain@{makeOneginGreatAgain}}
 \index{makeOneginGreatAgain@{makeOneginGreatAgain}!title.h@{title.h}}
 \doxysubsubsection{\texorpdfstring{makeOneginGreatAgain()}{makeOneginGreatAgain()}}
@@ -87,16 +49,6 @@ const char \mbox{\hyperlink{title_8h_a188ca891a509dc8f2074df7178c81492}{P\+U\+N\
 {\em \mbox{[}\+F\+I\+LE} & $\ast$\mbox{]} fp Указатель на файл с исходным текстом \\
 \hline
 \end{DoxyParams}
-\mbox{\Hypertarget{title_8h_a730477d73e21b348a2c3cb3e4e046cec}\label{title_8h_a730477d73e21b348a2c3cb3e4e046cec}} 
-\index{title.h@{title.h}!min@{min}}
-\index{min@{min}!title.h@{title.h}}
-\doxysubsubsection{\texorpdfstring{min()}{min()}}
-{\footnotesize\ttfamily size\+\_\+t min (\begin{DoxyParamCaption}\item[{size\+\_\+t}]{a,  }\item[{size\+\_\+t}]{b }\end{DoxyParamCaption})}
-
-
-
-Находит минимум из двух чисел 
-
 \mbox{\Hypertarget{title_8h_aa72568d0cf300221e9fea4e11ef224a7}\label{title_8h_aa72568d0cf300221e9fea4e11ef224a7}} 
 \index{title.h@{title.h}!OneginTest@{OneginTest}}
 \index{OneginTest@{OneginTest}!title.h@{title.h}}
@@ -106,123 +58,4 @@ const char \mbox{\hyperlink{title_8h_a188ca891a509dc8f2074df7178c81492}{P\+U\+N\
 
 
 Unitest. 
-
-\mbox{\Hypertarget{title_8h_a3c1e8d012913061f35f318aca472bf05}\label{title_8h_a3c1e8d012913061f35f318aca472bf05}} 
-\index{title.h@{title.h}!output@{output}}
-\index{output@{output}!title.h@{title.h}}
-\doxysubsubsection{\texorpdfstring{output()}{output()}}
-{\footnotesize\ttfamily void output (\begin{DoxyParamCaption}\item[{char $\ast$$\ast$}]{text,  }\item[{int}]{string\+\_\+amount }\end{DoxyParamCaption})}
-
-
-
-Функция вывода текста 
-
-
-\begin{DoxyParams}{Аргументы}
-{\em \mbox{[}char$\ast$$\ast$\mbox{]}} & text Массив, хранящий отсортированный текст построчно \\
-\hline
-{\em \mbox{[}int\mbox{]}} & string\+\_\+amount Число строк в массиве\\
-\hline
-\end{DoxyParams}
-Функция выыодит отсортированный текст построчно. \mbox{\Hypertarget{title_8h_a6881fa816533bd98441563590449f4d0}\label{title_8h_a6881fa816533bd98441563590449f4d0}} 
-\index{title.h@{title.h}!output\_original@{output\_original}}
-\index{output\_original@{output\_original}!title.h@{title.h}}
-\doxysubsubsection{\texorpdfstring{output\_original()}{output\_original()}}
-{\footnotesize\ttfamily void output\+\_\+original (\begin{DoxyParamCaption}\item[{char $\ast$}]{text\+\_\+temp,  }\item[{int}]{string\+\_\+amount }\end{DoxyParamCaption})}
-
-
-
-Выводит исходный текст 
-
-
-\begin{DoxyParams}{Аргументы}
-{\em \mbox{[}char} & $\ast$\mbox{]} text\+\_\+temp Массив, хранящий строки текста одну за одной \\
-\hline
-{\em \mbox{[}int\mbox{]}} & string\+\_\+amount Число строк в тексте \\
-\hline
-\end{DoxyParams}
-\mbox{\Hypertarget{title_8h_af8745a81de93d376ae1aeb06678a4256}\label{title_8h_af8745a81de93d376ae1aeb06678a4256}} 
-\index{title.h@{title.h}!output\_reverse@{output\_reverse}}
-\index{output\_reverse@{output\_reverse}!title.h@{title.h}}
-\doxysubsubsection{\texorpdfstring{output\_reverse()}{output\_reverse()}}
-{\footnotesize\ttfamily void output\+\_\+reverse (\begin{DoxyParamCaption}\item[{char $\ast$$\ast$}]{text,  }\item[{int}]{string\+\_\+amount }\end{DoxyParamCaption})}
-
-
-
-Выводит обратную сортировку 
-
-
-\begin{DoxyParams}{Аргументы}
-{\em \mbox{[}char} & $\ast$$\ast$\mbox{]} text Массив строк текста \\
-\hline
-{\em \mbox{[}int\mbox{]}} & string\+\_\+amount Число строк в тексте \\
-\hline
-\end{DoxyParams}
-\mbox{\Hypertarget{title_8h_a88f829cece0226ab590706979538d514}\label{title_8h_a88f829cece0226ab590706979538d514}} 
-\index{title.h@{title.h}!sorting@{sorting}}
-\index{sorting@{sorting}!title.h@{title.h}}
-\doxysubsubsection{\texorpdfstring{sorting()}{sorting()}}
-{\footnotesize\ttfamily void sorting (\begin{DoxyParamCaption}\item[{char $\ast$$\ast$}]{text,  }\item[{int}]{string\+\_\+amount }\end{DoxyParamCaption})}
-
-
-
-Функция сортировки 
-
-
-\begin{DoxyParams}{Аргументы}
-{\em \mbox{[}char$\ast$$\ast$\mbox{]}} & text Массив, хранящий текст построчно \\
-\hline
-{\em \mbox{[}int\mbox{]}} & string\+\_\+amount Число строк в тексте \\
-\hline
-\end{DoxyParams}
-\mbox{\Hypertarget{title_8h_aefd8a0af00542e58f089745391d6b811}\label{title_8h_aefd8a0af00542e58f089745391d6b811}} 
-\index{title.h@{title.h}!strcmp1@{strcmp1}}
-\index{strcmp1@{strcmp1}!title.h@{title.h}}
-\doxysubsubsection{\texorpdfstring{strcmp1()}{strcmp1()}}
-{\footnotesize\ttfamily int strcmp1 (\begin{DoxyParamCaption}\item[{const char $\ast$}]{string1,  }\item[{const char $\ast$}]{string2 }\end{DoxyParamCaption})}
-
-
-
-Функция сравнения строк 
-
-
-\begin{DoxyParams}{Аргументы}
-{\em \mbox{[}const} & char $\ast$\mbox{]} string1 Первая строка \\
-\hline
-{\em \mbox{[}const} & char $\ast$\mbox{]} string2 Вторая строка\\
-\hline
-\end{DoxyParams}
-Возвращает 1, если первая строка должна идти после второй. Возвращает -\/1, если первая строка должна идти перед второй. \mbox{\Hypertarget{title_8h_ae5f03f70dec7ac5618c94235b4eacb70}\label{title_8h_ae5f03f70dec7ac5618c94235b4eacb70}} 
-\index{title.h@{title.h}!to\_strings@{to\_strings}}
-\index{to\_strings@{to\_strings}!title.h@{title.h}}
-\doxysubsubsection{\texorpdfstring{to\_strings()}{to\_strings()}}
-{\footnotesize\ttfamily void to\+\_\+strings (\begin{DoxyParamCaption}\item[{char $\ast$}]{text\+\_\+temp,  }\item[{char $\ast$$\ast$}]{text,  }\item[{int}]{string\+\_\+amount }\end{DoxyParamCaption})}
-
-
-
-Функция преобразование массива текст в двумерный 
-
-
-\begin{DoxyParams}{Аргументы}
-{\em \mbox{[}char$\ast$\mbox{]}} & text\+\_\+temp УМассив всех символов текста \\
-\hline
-{\em \mbox{[}char$\ast$$\ast$\mbox{]}} & text Двумерный массив, хранящий текст построчно \\
-\hline
-{\em \mbox{[}int\mbox{]}} & string\+\_\+amount Общее число строк в тексте\\
-\hline
-\end{DoxyParams}
-Данная функция разбивает массив с текстом на строки для дальнейшей сортировки 
-
-\doxysubsection{Переменные}
-\mbox{\Hypertarget{title_8h_a188ca891a509dc8f2074df7178c81492}\label{title_8h_a188ca891a509dc8f2074df7178c81492}} 
-\index{title.h@{title.h}!PUNKTUATION\_MARK@{PUNKTUATION\_MARK}}
-\index{PUNKTUATION\_MARK@{PUNKTUATION\_MARK}!title.h@{title.h}}
-\doxysubsubsection{\texorpdfstring{PUNKTUATION\_MARK}{PUNKTUATION\_MARK}}
-{\footnotesize\ttfamily const char P\+U\+N\+K\+T\+U\+A\+T\+I\+O\+N\+\_\+\+M\+A\+RK\mbox{[}$\,$\mbox{]} = \char`\"{}.,!?-\/\+:; \char`\"{}}
-
-\mbox{\Hypertarget{title_8h_af08413a3ee12cf78b0ddeea71e2648b3}\label{title_8h_af08413a3ee12cf78b0ddeea71e2648b3}} 
-\index{title.h@{title.h}!SIZE@{SIZE}}
-\index{SIZE@{SIZE}!title.h@{title.h}}
-\doxysubsubsection{\texorpdfstring{SIZE}{SIZE}}
-{\footnotesize\ttfamily const int S\+I\+ZE = 100}
 
