--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -175,8 +175,12 @@
 \hypersetup{pageanchor=true}
 
 %--- Begin generated contents ---
+\chapter{Алфавитный указатель классов}
+\input{annotated}
 \chapter{Список файлов}
 \input{files}
+\chapter{Классы}
+\input{struct_text}
 \chapter{Файлы}
 \input{functions_8cpp}
 \input{main_8cpp}
