--- a/latex/annotated.tex
+++ b/latex/annotated.tex
@@ -1,4 +1,4 @@
 \doxysection{Классы}
 Классы с их кратким описанием.\begin{DoxyCompactList}
-\item\contentsline{section}{\mbox{\hyperlink{struct_text}{Text}} }{\pageref{struct_text}}{}
+\item\contentsline{section}{\mbox{\hyperlink{struct_line}{Line}} }{\pageref{struct_line}}{}
 \end{DoxyCompactList}
