--- a/latex/refman.tex
+++ b/latex/refman.tex
@@ -180,7 +180,7 @@
 \chapter{Список файлов}
 \input{files}
 \chapter{Классы}
-\input{struct_text}
+\input{struct_line}
 \chapter{Файлы}
 \input{functions_8cpp}
 \input{main_8cpp}
